refactor: update services for group context integration